--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
+bleach==5.0.0
 Django==4.0.3
+django-environ==0.8.1
+django-summernote==0.8.20.0
+Pillow==9.1.1
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
+tzdata==2022.1
+webencodings==0.5.1
